k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyramid
  namespace: pyramid
spec:
  selector:
    app: pyramid
  ports:
    - port: 80
      targetPort: 3000
